# motherboard

./: .gitignore  Cargo.toml  README.md
client/: Cargo.toml
client/examples/: client.rs  server.rs
client/src/: lib.rs
docs/: concurrency-refactor-plan.md
midl/: Cargo.toml  README.md
midl/docs/: compiler-architecture.md  language-spec.md  rust-mapping.md
midl/examples/: auth.midl
midl/src/: ast.rs  lib.rs  main.rs  parser.rs  tokenizer.rs
midl/src/codegen/: rust.rs
motherboard-ardos-ui-integration/: Cargo.toml
motherboard-ardos-ui-integration/src/: lib.rs
motherboardm/: .gitignore  Cargo.toml  rust-toolchain.toml
motherboardm/.helix/: languages.toml
motherboardm/scripts/: link-arch-rust-toolchain.sh
motherboardm/src/: allocator_adapter.rs  fake_files.rs  lib.rs  logger.rs  module.rs  motherboard_device.rs  services.rs  state.rs  utils.rs
motherboardm/src/fake_files/: data_fd.rs  inbox_latch.rs
motherboardm/src/services/: store.rs
motherboardm/src/state/: message_inbox.rs  reply_tokens.rs
proof-of-concept/ping-client/: Cargo.toml
proof-of-concept/ping-client/src/: main.rs
proof-of-concept/ping-service/: Cargo.toml
proof-of-concept/ping-service/src/: main.rs
proof-of-concept/settings-app/: Cargo.toml
proof-of-concept/settings-app/src/: main.rs
proof-of-concept/settings-service/: Cargo.toml
proof-of-concept/settings-service/src/: main.rs
protocol/: Cargo.toml
protocol/src/: commands.rs  lib.rs
