[workspace]
members = [
    "client",
    "midl",
    "motherboard-ardos-ui-integration",
    "proof-of-concept/ping-client",
    "proof-of-concept/ping-service",
    "proof-of-concept/midl-e2e",
    "proof-of-concept/settings-app",
    "proof-of-concept/settings-service",
    "protocol",
]
exclude = ["motherboardm"]
resolver = "3"

[profile.dev.package.serde]
opt-level = 1
