[package]
name = "motherboardm-protocol"
version = "0.1.0"
edition = "2024"

[lints.rust]
unexpected_cfgs = { level = "allow" }

[dependencies]
postcard = { version = "1.0", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
smol_str = { version = "0.3.6", default-features = false, features = ["serde"] }
thiserror = { version = "2.0.18", default-features = false }
hashbrown = { version = "0.17.1", default-features = false, features = ["default-hasher"]}
serde_json = {version = "1.0.150", default-features = false, features = ["alloc", "raw_value"]}
[features]
default = ["std"]
std = ["postcard/default", "postcard/use-std"]
